--- a/app/index.html
+++ b/app/index.html
@@ -36,17 +36,80 @@
   <link rel="canonical" href="http://www.example.com/">
   -->
 
-  <link rel="stylesheet" href="styles/main.scss">
+  <!--<link rel="stylesheet" href="styles/main.scss">-->
 
   <!-- Material Design icons -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
+  <!--<link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.cyan-light_blue.min.css">-->
+  <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.brown-blue.min.css"/>
+
   <!-- Your styles -->
-  <link rel="stylesheet" href="styles/main.scss">
+  <!--<link rel="stylesheet" href="styles/main.scss">-->
+
+  <style>
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
+
+    #map {
+      height: 100%;
+    }
+  </style>
+
 </head>
 <body>
 <!-- Add your site or app content here -->
-<h1>BLAAAAAAAAAARG!</h1>
+
+<!-- BEGIN ------------------------------------------------------------->
+
+<div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer">
+  <header class="mdl-layout__header">
+    <div class="mdl-layout__header-row">
+      <span class="mdl-layout__title">Neighborhood Map</span>
+    </div>
+  </header>
+  <div class="mdl-layout__drawer">
+    <header class="mdl-layout__header">
+      <div class="mdl-layout__header-row">
+        <span class="mdl-layout__title">Locations</span>
+      </div>
+    </header>
+    <div>
+      <form action="#">
+        <div class="mdl-textfield mdl-js-textfield">
+          <input class="mdl-textfield__input" type="text" id="sample1">
+          <label class="mdl-textfield__label" for="sample1">Filter</label>
+        </div>
+      </form>
+    </div>
+    <nav class="mdl-navigation">
+      <a class="mdl-navigation__link" href="#">Hello</a>
+      <a class="mdl-navigation__link" href="#">World.</a>
+      <a class="mdl-navigation__link" href="#">How</a>
+      <a class="mdl-navigation__link" href="#">Are</a>
+      <a class="mdl-navigation__link" href="#">You?</a>
+    </nav>
+  </div>
+  <main class="mdl-layout__content" id="map">
+    <!--<div id="map"></div>-->
+    <script>
+      var map;
+      function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+          center: {lat: -34.397, lng: 150.644},
+          zoom: 8
+        });
+      }
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA6B4Ho8hb4k0xx6lYhC_uVl944Kcju3T0&callback=initMap"
+            async defer></script>
+  </main>
+</div>
+
+<!-- END ------------------------------------------------------------->
 
 <!-- build:js(app/) ../../scripts/main.min.js -->
 <script src="./styles/src/mdlComponentHandler.js"></script>
