--- a/app/index.html
+++ b/app/index.html
@@ -44,20 +44,20 @@
   <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.brown-blue.min.css"/>
 
   <style>
-    html, body {
-      height: 100%;
-      margin: 0;
-      padding: 0;
-    }
+    /*html, body {*/
+      /*height: 100%;*/
+      /*margin: 0;*/
+      /*padding: 0;*/
+    /*}*/
 
     map {
       height: 100%;
     }
 
-    /*.mdl-layout__header-row span.mdl-layout-title {*/
-    /*color: #ffb648;*/
-    /*text-transform: uppercase;*/
-    /*}*/
+    .selected {
+      background-color: #e0e0e0;
+      font-weight: bold;
+    }
   </style>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
@@ -95,7 +95,8 @@
 
     <nav class="mdl-navigation">
       <div data-bind="foreach: venues">
-        <a data-bind="text: name, click: $parent.selectVenue" class="mdl-navigation__link" href="#"></a>
+        <a data-bind="text: name, click: $root.selectVenue, css: { selected: $root.isSelected($data) }"
+           class="mdl-navigation__link" href=""></a>
       </div>
     </nav>
   </div>
@@ -125,10 +126,6 @@
 <script src="scripts/app.js"></script>
 <script src="scripts/main.js"></script>
 <!-- endbuild -->
-
-<!--<script async defer-->
-        <!--src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA6B4Ho8hb4k0xx6lYhC_uVl944Kcju3T0&callback=initMap">-->
-<!--</script>-->
 
 <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA6B4Ho8hb4k0xx6lYhC_uVl944Kcju3T0">
