--- a/app/index.html
+++ b/app/index.html
@@ -133,7 +133,7 @@
 
 <script>
   function init() {
-    var app = new APP();
+    var app = new MapApp();
     app.initialize('map', document);
     ko.applyBindings(app);
   }
