--- a/app/index.html
+++ b/app/index.html
@@ -41,35 +41,59 @@
 
   <!-- Your styles -->
   <!--<link rel="stylesheet" href="styles/main.css">-->
-  <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.brown-blue.min.css"/>
+  <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.brown-blue.min.css">
 
   <style>
-    /*html, body {*/
-      /*height: 100%;*/
-      /*margin: 0;*/
-      /*padding: 0;*/
-    /*}*/
-
     map {
       height: 100%;
     }
 
-    .selected {
+    .venue-selected {
       background-color: #e0e0e0;
       font-weight: bold;
     }
   </style>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+  <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.0/knockout-min.js"></script>
+
+  <!--<script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>-->
+  <link rel="import" href="./styles/bower_components/iron-ajax/iron-ajax.html">
+  <link rel="import" href="./styles/bower_components/iron-ajax/iron-request.html">
 </head>
 <body onload="init()">
 <!-- Add your site or app content here -->
 
 <!-- BEGIN ------------------------------------------------------------->
 
+<!--<iron-ajax-->
+  <!--auto-->
+  <!--url="http://gdata.youtube.com/feeds/api/videos/"-->
+  <!--params='{"alt":"json", "q":"chrome"}'-->
+  <!--handle-as="json"-->
+  <!--on-response="handleResponse"-->
+  <!--debounce-duration="300">-->
+<!--</iron-ajax>-->
+
 <!-- Always shows a header, even in smaller screens. -->
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header mdl-layout--fixed-drawer">
+
+  <!--<template is="dom-bind" id="app">-->
+    <!--<iron-ajax auto-->
+               <!--url="https://www.googleapis.com/youtube/v3/search"-->
+               <!--params='{"part":"snippet", "q":"polymer", "key": "AIzaSyAuecFZ9xJXbGDkQYWBmYrtzOGJD-iDIgI", "type": "video"}'-->
+               <!--handle-as="json"-->
+               <!--last-response="{{ajaxResponse}}"></iron-ajax>-->
+
+    <!--<template is="dom-repeat" items="[[ajaxResponse.items]]">-->
+      <!--<div class="horizontal-section">-->
+        <!--<h2><a href="[[url(item.id.videoId)]]" target="_blank">[[item.snippet.title]]</a></h2>-->
+        <!--<iron-image src="[[item.snippet.thumbnails.high.url]]" width="256" height="256" sizing="cover" preload fade></iron-image>-->
+        <!--<p>[[item.snippet.description]]</p>-->
+      <!--</div>-->
+    <!--</template>-->
+  <!--</template>-->
+
   <header class="mdl-layout__header">
     <div class="mdl-layout__header-row">
       <!-- Add spacer, to align title to the right -->
@@ -95,7 +119,7 @@
 
     <nav class="mdl-navigation">
       <div data-bind="foreach: venues">
-        <a data-bind="text: name, click: $root.selectVenue, css: { selected: $root.isSelected($data) }"
+        <a data-bind="text: name, click: $root.selectVenue, css: { 'venue-selected': $root.isSelected($data) }"
            class="mdl-navigation__link" href=""></a>
       </div>
     </nav>
@@ -123,6 +147,7 @@
 <script src="./styles/src/layout/layout.js"></script>
 <script src="./styles/src/data-table/data-table.js"></script>
 <script src="./styles/src/ripple/ripple.js"></script>
+<script src="./styles/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
 <script src="scripts/app.js"></script>
 <script src="scripts/main.js"></script>
 <!-- endbuild -->
@@ -130,6 +155,13 @@
 <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA6B4Ho8hb4k0xx6lYhC_uVl944Kcju3T0">
 </script>
+
+<!--<script>-->
+  <!--var app = document.querySelector('#app');-->
+  <!--app.url = function (videoId) {-->
+    <!--return 'https://www.youtube.com/watch?v=' + videoId;-->
+  <!--};-->
+<!--</script>-->
 
 <script>
   function init() {
