--- a/app/index.html
+++ b/app/index.html
@@ -89,7 +89,8 @@
         <i class="material-icons">filter_list</i>
       </label>
       <div class="mdl-textfield__expandable-holder">
-        <input data-bind="value: filterQuery, valueUpdate: 'afterkeydown'" class="mdl-textfield__input" type="text" id="search-expandable">
+        <input data-bind="value: filterQuery, valueUpdate: 'afterkeydown'" class="mdl-textfield__input" type="text"
+               id="search-expandable">
         <label class="mdl-textfield__label" for="search-expandable">Filter</label>
       </div>
     </div>
