Fixed build issue that referenced a bad location for main.min.js that would cause the page to fail on github pages

--- a/app/index.html
+++ b/app/index.html
@@ -117,7 +117,7 @@
 
 <!-- END ------------------------------------------------------------->
 
-<!-- build:js(app/) ../../scripts/main.min.js -->
+<!-- build:js(app/) ./scripts/main.min.js -->
 <script src="./styles/src/mdlComponentHandler.js"></script>
 <script src="./styles/src/button/button.js"></script>
 <script src="./styles/src/checkbox/checkbox.js"></script>
@@ -134,8 +134,8 @@
 <script src="./styles/src/layout/layout.js"></script>
 <script src="./styles/src/data-table/data-table.js"></script>
 <script src="./styles/src/ripple/ripple.js"></script>
-<script src="scripts/app.js"></script>
-<script src="scripts/main.js"></script>
+<script src="./scripts/app.js"></script>
+<script src="./scripts/main.js"></script>
 <!-- endbuild -->
 
 <script async defer
