Asynchronously load a couple of scripts

--- a/app/index.html
+++ b/app/index.html
@@ -55,8 +55,8 @@
     }
   </style>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.0/knockout-min.js"></script>
-  <script src="./styles/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+  <script async src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.0/knockout-min.js"></script>
+  <script async src="./styles/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
 
   <link rel="import" href="./styles/bower_components/iron-ajax/iron-ajax.html">
   <link rel="import" href="./styles/bower_components/iron-ajax/iron-request.html">
