Asynchronously loading of knockout.js file from CDN

--- a/app/index.html
+++ b/app/index.html
@@ -55,13 +55,13 @@
     }
   </style>
 
-  <script async src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.0/knockout-min.js"></script>
-  <script async src="./styles/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+  <script asyn defer src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.0/knockout-min.js"></script>
+  <script src="./styles/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
 
   <link rel="import" href="./styles/bower_components/iron-ajax/iron-ajax.html">
   <link rel="import" href="./styles/bower_components/iron-ajax/iron-request.html">
 </head>
-<body onload="onLoad()">
+<body onload="onLoad()" unresolved>
 <!-- Add your site or app content here -->
 
 <!-- BEGIN ------------------------------------------------------------->
